apps/public/public-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public
  namespace: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public
  template:
    metadata:
      labels:
        app: public
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: nginx
          image: 100.124.41.14:32000/th3borg-public:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
