apps/public/public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public
  namespace: public
spec:
  selector:
    app: public
  ports:
    - port: 80
      targetPort: 80
