apps/public/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: public
spec:
  ingressClassName: nginx
  rules:
    - host: th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public
                port:
                  number: 80
